# hel

./: Cargo.toml  LICENSE  README.md
benches/: channel_bench.rs  pool_scaling.rs  trade_bench.rs
change_log/: v1.1.0.md  v1.1.1.md  v1.2.0.md  v1.2.1.md  v1.2.2.md  v1.3.0.md  v1.3.1.md  v1.3.2.md  v1.3.3.md  v1.3.4.md  v2.0.0.md
examples/: async_basic.rs  async_batch.rs  async_batch_send.rs  async_mpmc.rs  async_mpmc_bk.rs  async_mpmc_bk_cancel.rs  async_mpmc_bk_cancel_no_loss.rs  async_mpmc_gr.rs  async_mpmc_gr_batch.rs  async_mpmc_gr_batch_with_helper_sink.rs  async_mpmc_gr_cancel.rs  async_mpmc_gr_cancel_no_loss.rs  async_mpmc_rr.rs  async_mpmc_rr_batch.rs  async_mpmc_rr_batch_with_helper.rs  async_mpmc_rr_batch_with_helper_sink.rs  async_mpmc_rr_cancel.rs  async_mpmc_rr_cancel_no_loss.rs  async_pipline.rs  async_select.rs  async_spsc.rs  async_spsc_batch.rs  async_spsc_cancel.rs  async_stream.rs  async_stream_while.rs  basic.rs  blocking_batch.rs  blocking_batch_send.rs  blocking_mpmc.rs  blocking_send_try.rs  blocking_spsc.rs  gracefull_shutdown.rs  mix_mpmc_bk.rs  mix_mpmc_bk_reverse.rs  mix_mpmc_rr.rs  mix_mpmc_rr_reverse.rs  mix_spsc.rs  mix_spsc_reverse.rs  pool_async_custom_handler_batch.rs  pool_async_custom_handler_per_item.rs  (+28 more)
src/: cache.rs  core.rs  errors.rs  helper.rs  internal_channel.rs  lib.rs  macros.rs  pool.rs  receiver.rs  result.rs  sender.rs  shard.rs  sync.rs
src/helper/: batch.rs  panic.rs
src/internal_channel/: core.rs  errors.rs  loom_tests.rs  receiver.rs  sender.rs  sync.rs  traits.rs
src/pool/: guard.rs  handler.rs  instance.rs  loom_tests.rs  signal.rs  sync.rs  traits.rs
src/shard/: errors.rs  mpmc.rs  spsc.rs
src/shard/mpmc/: buf.rs  hash.rs  mod.rs  receiver.rs  sender_group.rs  sender_key.rs  sender_round_robin.rs
src/shim/: loom.rs
