[package]
name = "hel-rs"
version = "1.2.2"
edition = "2024"
authors = ["Bieliaiev Vladyslav <vladbpython@gmail.com>"]
description = "High-performance lock-free sharded sync+async MPMC/SPSC channels with keyed routing"
license = "MIT"
repository = "https://github.com/vladbpython/hel"
readme = "README.md"
keywords = ["channel", "mpmc", "spsc", "lock-free", "concurrency"]
categories = ["concurrency", "asynchronous"]
exclude = [
    "**/.DS_Store",
]

[dependencies]
atomic-waker = "1"
futures = "0.3.32"
num_cpus = "1.17.0"
parking_lot = "0.12"
xxhash-rust = { version = "0.8", features = ["xxh3"] }


[dev-dependencies]
flume = "0.12"
criterion = { version = "0.8.2", features = ["async_tokio","html_reports"] }
crossbeam-channel = "0.5.15"
tokio = { version ="1.49.0", features = ["full"]}
tokio-util = { version = "0.7.18"}

[[bench]]
name = "trade_bench"
harness = false
path = "benches/trade_bench.rs"


[lib]
name = "hel"

