[package]
name = "hel-rs"
version = "1.3.0"
edition = "2024"
authors = ["Bieliaiev Vladyslav <vladbpython@gmail.com>"]
description = "High-performance lock-free sharded sync+async MPMC/SPSC channels with keyed routing"
license = "MIT"
repository = "https://github.com/vladbpython/hel"
readme = "README.md"
keywords = ["channel", "mpmc", "spsc", "lock-free", "concurrency"]
categories = ["concurrency", "asynchronous"]
exclude = [
    "**/.DS_Store",
]

[dependencies]
atomic-waker = "1"
futures = "0.3.32"
num_cpus = "1.17.0"
parking_lot = "0.12"
xxhash-rust = { version = "0.8", features = ["xxh3"] }


[dev-dependencies]
flume = "0.12"
criterion = { version = "0.8.2", features = ["async_tokio","html_reports"] }
crossbeam-channel = "0.5.15"
tokio = { version ="1.49.0", features = ["full"]}
tokio-util = { version = "0.7.18"}

[[bench]]
name = "trade_bench"
harness = false
path = "benches/trade_bench.rs"

[[bench]]
name = "pool_scaling"
harness = false
path = "benches/pool_scaling.rs"
required-features = ["pool"]


[lib]
name = "hel"

[features]
default = []
pool = []

[[example]]
name = "pool_async_mpmc_bk_batch"
required-features = ["pool"]

[[example]]
name = "pool_async_mpmc_bk"
required-features = ["pool"]

[[example]]
name = "pool_async_mpmc_gr_batch"
required-features = ["pool"]

[[example]]
name = "pool_async_mpmc_gr"
required-features = ["pool"]

[[example]]
name = "pool_async_mpmc_rr_batch"
required-features = ["pool"]

[[example]]
name = "pool_async_mpmc_rr_cancel_no_loss"
required-features = ["pool"]

[[example]]
name = "pool_async_mpmc_rr_cancel"
required-features = ["pool"]

[[example]]
name = "pool_async_mpmc_rr"
required-features = ["pool"]

[[example]]
name = "pool_elasticity"
required-features = ["pool"]

[[example]]
name = "pool_sync_mpmc_bk_batch"
required-features = ["pool"]

[[example]]
name = "pool_sync_mpmc_bk"
required-features = ["pool"]

[[example]]
name = "pool_sync_mpmc_gr_batch"
required-features = ["pool"]

[[example]]
name = "pool_sync_mpmc_gr"
required-features = ["pool"]

[[example]]
name = "pool_sync_mpmc_rr_batch"
required-features = ["pool"]

[[example]]
name = "pool_sync_mpmc_rr"
required-features = ["pool"]

[[example]]
name = "pool_sync_custom_handler_batch"
required-features = ["pool"]

[[example]]
name = "pool_sync_custom_handler_per_item"
required-features = ["pool"]

[[example]]
name = "pool_async_custom_handler_batch"
required-features = ["pool"]

[[example]]
name = "pool_async_custom_handler_per_item"
required-features = ["pool"]


